Add swag to /call endpoint
